fix error text alignment

--- a/iogt/styles/iogt/modules/_m-survey.scss
+++ b/iogt/styles/iogt/modules/_m-survey.scss
@@ -69,5 +69,5 @@
   }
 }
 .error--surveys {
-  padding: 0 10px;
+  padding-top: 5px;
 }
