--- a/iogt/styles/iogt/state/_s-survey.scss
+++ b/iogt/styles/iogt/state/_s-survey.scss
@@ -21,9 +21,8 @@
     }
   }
 }
-.surveys__form,
-.error--surveys {
-    padding: 0 15px;
+.surveys__form {
+  padding: 0 15px;
 }
 .surveys__results,
 .surveys__results {
